[package]
name = "pmd-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["html", "rss", "text"]
html = []
pdf  = ["dep:headless_chrome"]
text = []
rss  = []

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
color-print = "0.3.5"
headless_chrome = { version = "1.0.9", optional = true }
regex = "1.10.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tempfile = "3.10.1"
